--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,49 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Logs
+logs
+*.log
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+#intellij settles
+.idea
 
-# testing
-/coverage
+# Dependency directory
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+node_modules/
 
-# production
-/build
+# Environmental config
+.env
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+#config js
+src/APIConfig.js
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+#dist
+dist/
+
+#nyc_output
+.nyc_output/
+
+#package json lock
+package-lock.json
+
+#ignore build css and js files
+assets/css/editor-styles.css
+assets/css/build/
+assets/css/dist
+assets/css/rev-manifest.json
+assets/css/styles.css
+assets/css/styles.css.map
+assets/js/build/bundle.js
+assets/js/build/bundle.js.map
+assets/js/dist
+assets/js/rev-manifest.json
+assets/js/APIConfig.js
+
+#ignore test reports
+coverage
+xunit.xml
+reports
+
+index.html
+my-shows.html
+new-tonight.html
+overview.html
+account-settings.html
